@startuml
!include ../../_common/style.puml

title L3：发送结果与可靠性边界类图
left to right direction

package "API\nmessage-api.publish" #E3F2FD {
  class SendResult
  class SendReliabilityInfo
  enum SendStatus
  enum SendStage
  enum SendFailureType
}

package "SPI\nmessage-spi" #ECEFF1 {
  class ProviderSendResult
}

package "Core Send Reliability\nmessage-core.send.reliability" #FFF3E0 {
  class MessageSendRetryClassifier
}

package "Retry Component" #FCE4EC {
  class RetryResult
}

ProviderSendResult --> SendStatus
ProviderSendResult --> SendFailureType
MessageSendRetryClassifier --> ProviderSendResult
MessageSendRetryClassifier --> RetryResult
RetryResult --> SendReliabilityInfo
SendResult --> SendStatus
SendResult --> SendStage
SendResult --> SendFailureType
SendResult --> SendReliabilityInfo
@enduml
